crates/moire-source-context/src/snapshots/moire_source_context__tests__single_stmt_closure_walks_up.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn outer()
# scope 3..7

   3 |     let b = 2;
   4 |     let c = vec.iter().map(|x| {
   5 |         x + 1
   6 |     });
   7 |     let d = 3;
