crates/moire-source-context/src/snapshots/moire_source_context__tests__statement_dedents_continuation.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# fn run()
# scope 2..6

   2 |     spawn(async move {
     | ...
   5 |     })
   6 |     .named("blocked_receiver");
