crates/moire-source-context/src/snapshots/moire_source_context__tests__statement_dedents_continuation.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# fn run()
# scope 2..6

   2 |     spawn(async move {
   3 |         println!("hello");
   4 |         let _ = idle_rx.recv().await;
   5 |     })
   6 |     .named("blocked_receiver");
