crates/moire-source-context/src/snapshots/moire_source_context__tests__strips_multiple_attributes.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async recv(&mut self) -> Result<Option<Msg>>
# scope 4..4

   4  |     self.rx.recv().await
