crates/moire-source-context/src/snapshots/moire_source_context__tests__strips_multiple_attributes.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# async fn recv(&mut self) -> Result<Option<Msg>>
# scope 4..4

   4 |     self.rx.recv().await
