crates/moire-source-context/src/snapshots/moire_source_context__tests__target_on_await_line.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# async fn do_work()
# scope 5..6

   5  |     let result = main_work()
   6 >|         .await;
