crates/moire-source-context/src/snapshots/moire_source_context__tests__target_on_await_line.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# async fn do_work()
# scope 4..7

   4 |     let c = step_two().await;
   5 |     let result = main_work()
   6 |         .await;
   7 |     let d = cleanup().await;
