crates/moire-source-context/src/snapshots/moire_source_context__tests__target_on_fn_keyword.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# do_stuff(x: u32, y: u32) -> bool
# scope 2..2

   2  |     let z = x + y;
