crates/moire-source-context/src/snapshots/moire_source_context__tests__target_on_fn_keyword.normal.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{normal_body}\")"
---
# do_stuff(x: u32, y: u32) -> bool
# scope 2..3

   2  |     let z = x + y;
   3  |     z > 10
