crates/moire-source-context/src/snapshots/moire_source_context__tests__target_on_fn_signature_line.compact.snap
---
source: crates/moire-source-context/src/tests.rs
expression: "format!(\"# {header}\\n{compact_body}\")"
---
# 
# scope 1..8

   1 | impl Session {
   2 |     async fn recv(&mut self) -> Result<Option<SelfRef<Msg<'static>>>, Self::Error> {
     | ...
   7 |     }
   8 | }
